css/main.css
@import url(http://fonts.googleapis.com/earlyaccess/jejugothic.css);
@import 'https://fonts.googleapis.com/css?family=Montserrat:700';
@import url('https://fonts.googleapis.com/css?family=Montserrat');

body{
  background-color: #2b2b2b;
}
a.aside-item{
  color:#FFF;
  /*padding-left: 0px;*/
  margin-bottom: 0px;
  background-color: #FFC107; 
}
ul.aside-item:first-child{
  /*margin-top: 72px;*/
  padding-top: 72px;
  border-radius: 4px 4px 0px 0px;
}
ul.aside-item{
  text-decoration: none; 
  background-color: #FFC107; 
  padding-left: 16px;
  padding-right: 16px;
  padding-bottom: 10px;
  margin-bottom: 0px;
  width: auto;
}
ul.aside-item:last-child{
  padding-bottom: 72px;
  border-radius: 0px 0px 4px 4px;
}
ul.project_list{
  padding-left: 0px;
  background-color: none;
  color: #2b2b2b;
}
nav{
  /*background-color: #FFC107;*/
  margin-top: 72px;
}
a{
  text-decoration: none;
  font-family: 'Montserrat', sans-serif;
  font-size:16px;
}
a:hover{
  text-decoration: none;
    color: #cc9a05;

}
a:active{
  text-decoration: none;
  color: #e2E2e2;
}
a.project_list:visited{
  text-decoration: none;
  color: #2b2b2b;
}
a:visited{
  text-decoration: none;
  color: #FFF;
}
.sub_title{
  margin-top: 72px;
  color: #FFC107;
  font-weight: bold;

}
.youtube_embedded{
  margin-right: 96px;
}
#HOME-UPPER{
  padding-left: 96px;
  background: url("../img/home_back.jpg") center center no-repeat #FFF;
  background-size: cover;
  border-radius: 2px 2px 0px 0px;
  z-index: 0;
}
#HOME-UNDER{
  padding-left: 96px;
  padding-right: 96px;
  padding-top: 48px;
  margin-top:20px; 
  color:#212121;
  font-family: 'Montserrat', sans-serif;
  font-size:14px;
  line-height: 160%;
  z-index: 1;
  background-color: #FFF;
}
#HOME{
  
}
#myName{
  font-family: 'Montserrat', sans-serif;
  font-size:64px;
  color: #FFC107;
  padding-top: 64px;
  line-height: 90%;
}

#myInfo{
  font-family: 'Montserrat', sans-serif;
  line-height: 180%;
  font-size:16px;
  color: #FFF;
}
#moreInfoLabel{
  margin-top: 48px;
  font-family: 'Montserrat', sans-serif;
  line-height: 180%;
  font-size:16px;
  color: #FFC107;
}
.Email{
    font-size: 14px;
    line-height: 160%;
}
.yellow{
  color: #FFC107;
}
#myBirthday{
  font-family: 'Montserrat', sans-serif;
  font-size:64px;
  color: #FFF;
  line-height: 70%;
  margin-bottom: -20px;
}
#aside{
  /*border-radius:4px;
  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
  background-color: #FFC107;
  margin-top: 72px;
  height: 80vh;
  margin-right: 16px;
  padding-left: 0px;
  padding-right: 0px;*/
  /*position: fixed;*/
}
.card{
  border-radius:4px;
  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
  background-color: #FFF;
  height: auto;
  margin-top: 72px;
  margin-bottom: 72px;
  padding-bottom: 32px;
}
.card:hover{
  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
}
.title{
  color:#212121;
  font-family: 'Montserrat', sans-serif;
  font-size:64px;
}
.card-normal{
  padding-top: 64px; 
  padding-left: 96px;
  padding-right: 96px;
}
.project_list_title{
  color:#FFC107;
  font-size: 16px;
  font-family: 'Montserrat', sans-serif;
}
.project_list{
  color: #2b2b2b;
  background-color: none;
}
.project_list:last-child{
  margin-bottom: 32px;
}
.triangle{
  position: relative;
  width: 0; 
  height: 0; 
  border-top: 50px solid transparent;
  border-bottom: 50px solid transparent; 
  border-right:50px solid #FFC107; 
  transform: rotate(45deg);
  border-radius: 4px 0px 0px 0px;
  margin-left: -103px;
  margin-top: -96px;
}
.triangle_1{
  width: 0; 
  height: 0; 
  border-top: 50px solid transparent;
  border-bottom: 50px solid transparent; 
  border-right:50px solid #FFC107; 
  border-radius: 4px 0px 0px 0px;
  margin-left: 604px;
  margin-top: -50px;
  margin-bottom:-70px; 
  z-index: 2;
}
@media(max-width: 1024px){
  .youtube_embedded{
  margin-right: 16px;
    }
  .contents{
    margin-left: 8px;
  }
  a{
    font-size: 8px;
  }
  ul{
    padding-left: 8px;
    padding-right: 8px;
  }
  ul:last-child{
  /*padding-bottom: 10vh;*/
  border-radius: 0px 0px 4px 4px;
}
  #HOME-UPPER{
    padding-left: 16px;
    background: url("../img/home_back_blur.jpg") center center no-repeat #FFF;
    background-size: cover;
    border-radius: 2px 2px 0px 0px;
  }
  #HOME-UNDER{
    padding-left: 16px;
    padding-right: 16px;
    padding-top:48px; 
    color:#212121;
    font-family: 'Montserrat', sans-serif;
    font-size:12px;
    line-height: 160%;
    padding-bottom: 16px;
  }
  #myBirthday{
    
    font-size:48px;
    color: #FFF;
    line-height: 70%;
    margin-bottom: -20px;
  }
  .Email{
    font-size: 18px;
    line-height: 160%;
  }
  .card{
    margin-left: 88px;
    border-radius:4px;
    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
    background-color: #FFF;
    height: auto;
    margin-top: 0px;
  }
  .card-normal{
    padding-top: 64px; 
    padding-left: 16px;
    padding-right: 16px;
  }
  .title{
    color:#212121;
    font-family: 'Montserrat', sans-serif;
    font-size:32px;
  }
  #aside{
    padding-left: 8px;
    padding-right: 0px;
    z-index: 99;
    height: auto;
  }
}
/*a{
   color:white;
   font-family: 'Montserrat', sans-serif;
   font-size: 18px;
   text-decoration: none;
}
a:hover{
  text-decoration: none;
  color: #e2E2e2;
}

.navbar-custom .nav a{
  background: #FFC107;
}

.card-title{
  background-color:#FFC107;
  border-radius: 4px;
}


.navbar-custom .nav li a:active,
.navbar-custom .nav li a:focus,
.navbar-custom .nav li a:hover {
  color: #ffa000;
   background-color: rgba(255,255,255,1);
    text-decoration: none;
}


  


.navbar {
   min-height: 80px;
}

.navbar-custom{
   margin-bottom: 0;
   border-bottom: 1px solid rgba(255, 255, 255, .3)
   height: 80px;
}



#ukulele_{
  height: auto;
  overflow:hidden;
 background: url(../img/ukulele.jpg) center center no-repeat #FFF;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
   -o-background-size: cover;
   border-radius: 4px;
}
#news_{
  height: auto;
  overflow:hidden;
 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
   -o-background-size: cover;

}
#pixiv_{
  height: auto;
  overflow:auto;
 background: url(../img/pixiv_back.png) center center no-repeat #FFF;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
   -o-background-size: cover;
   border-radius: 4px;
}
.main-wrapper{
  min-height: 100%;
}
.main{
  overflow:auto;
  padding-bottom:150px;
}

.paintItem{
  height: 100px;
  width: 100px;
  border-radius: 4px;
  overflow:auto;
  background-color: white;
  display: inline-block;
  margin-right: 10px;
  margin-bottom: 10px;
  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
}

.paintItem:hover{
  box-shadow: 0 5px 5px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
}



button{
  background: #fff;
  border-radius: 2px;
  display: inline-block;
  
  margin: 1rem;
  position: relative;
  
}
button:hover{
  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
}

.none-button{
  margin:20px;
  padding: 10px;
  padding-left:15px;
  padding-right:15px;

}
header{
  
  padding-bottom: 15px;

}
.section{

  
  padding-top:0px;
  margin:10px;
  padding: 0px;
  display: inline-block;
  width: 90%;
  min-height: 200px;
 }


h2{
  margin-top: 0px;
   font-family: 'Montserrat', sans-serif;
   font-size: 30px;
   color: rgba(111,111,111,1);
}
h3{
   color:rgb(241,26,61);
   margin-bottom: 50px;
}

h5{
  font-family: 'Montserrat', sans-serif;
  color:#5f5f5f; font-size:16px;
  line-height: 27px;
}
h6{
  font-size: 10;
}
.btn {
   font-family: 'Montserrat', sans-serif;
    padding: 14px 24px;
    border: 0 none;
    font-weight: 700;
    letter-spacing: 1px;
    text-transform: uppercase;
}
.btn:focus, .btn:active:focus, .btn.active:focus {
    outline: 0 none;
}
.btn:active:focus{
    background: #FFC107;
    color: #ffffff;
}

.btn-primary {
    background: #FFC107;
    color: #ffffff;
}
.btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open > .dropdown-toggle.btn-primary {

    background:#FFC107;
}
.btn-primary:active, .btn-primary.active {
    background: #FFC107;
    box-shadow: none;
}
.round {
   border-radius: 4px;
}
.btn-wrapper{
  padding-left: 30px;
   padding-top: 20px;
   padding-bottom: 20px;
   background-color: white;
   border-radius: 0px 0px 4px 4px;
}

hr{
  height: 2px;
  width: 100%;
  background-color: rgba(36, 36, 36, 0.5);;
  margin:2px;
  border: none;
}
#navi{
  width: 92.2%;
  margin-top:40px;
}

@media(max-height: 768px){
  #hero{
    margin-top: 250px;
  }
  .navbar-custom{
    
    background-color: #00FFC107;
    margin-left: 10px;
  }

  .navbar-nav{

  }

}
#header{
  min-height: 300px;
  height: auto;
}

#desc a{
  color:#242424;
   font-family: 'Montserrat', sans-serif;
   font-size: 18px;
   text-decoration: none;
   display: inline-block;
}

.navbar-fixed-bottom{

   
  height: 50px;

  color: #242424;
   background-color: #e5e5e5;
}

html,
body {
    height: 100%;
    background-color: #2b2b2b;
}



.na-collapse{
  background-color: #FFC107;
}

.section-title{
  color:#FFC107;
  margin-top: 10px;
  font-size: 48px;
}

.fa-bars{
  color: white;
}
.fa-bars:hover,
.fa-bars:focus,
.fa-bars:active,
.fa-bars:disabled
.fa-bars:enabled{
  color: white;
}

#desc{
  
  font-size: 12px;
    line-height: 1.66667;
}
.desc-right{
  vertical-align: center;
  margin-top: 10px;
  
}
.desc-right a{
  padding-left: 7px;
  color: #424242;
}

.label-contents{
  height:300px;
}
a.location{
  font-size: 12px;
  line-height: 1.66667;
  color: #242424;
}
*/

